<resources>

    <string name="app_name">Sweng2012QuizApp</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Sweng Quiz App</string>
    <string name="title_activity_show_questions">ShowQuestionsActivity</string>
    <string name="button_nextQuestion">Next question</string>
    <string name="error_message">There was an error retrieving the question</string>
    <string name="title_activity_edit_question">Create here a new question</string>
    <string name="edit_button_submit">Submit</string>
    <string name="edit_tags_hint">Type in the question\'s tags</string>
    <string name="edit_question_hint">Type in the question\'s text body</string>
    <string name="plus_sign">\u002B</string>
    <string name="hyphen_minus">\u002D</string>
    <string name="heavy_ballot_x">\u2718</string>
    <string name="heavy_check_mark">\u2714</string>
    <string name="edit_answer_hint">Type in the answer</string>
    <string name="main_message">What do you want to do?</string>
    <string name="button_like">Like (%d)</string>
    <string name="button_dislike">Dislike (%d)</string>
    <string name="button_incorrect">Incorrect (%d)</string>
    <string name="rating_notrated">You have not rated this question</string>
    <string name="rating_like">You like the question</string>
    <string name="rating_dislike">You dislike the question</string>
    <string name="rating_incorrect">You think the question is incorrect</string>
    <string name="button_choose_submit_text">Submit quiz question</string>
    <string name="button_choose_display_text">Show a random question</string>
    <string name="submit_question_success_text">\u2714 Question successfully submitted, has id %s</string>
    <string name="submit_question_error_text">\u2718 An error occured while submitting the Question</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="auth_message">Please login</string>
    <string name="auth_login_hint">GASPAR Username</string>
    <string name="auth_pass_hint">GASPAR Password</string>
    <string name="auth_submit_text">Log in using Tequila</string>
    <string name="button_logout">Log out</string>
    <string name="checkbox_offline">Offline mode</string>
    <string name="auth_error_text">Authentication failed!</string>
    <string name="auth_success_text">Authentication successful! =D</string>
    <string name="tequila">tequila</string>
    <string name="submit_rating_error_text">There was an error setting the rating</string>
    <string name="load_rating_error_text">There was an error retrieving the ratings</string>
    <string name="button_choose_takeQuiz_text">Take a Quiz</string>
    <string name="title_activity_show_available_quizzes">ShowAvailableQuizzesActivity</string>
    <string name="quiz_hand_in_error">An error occurred while handing in your answers</string>
    <string name="quiz_load_error">An error occurred while loading the quiz.</string>
    <string name="quiz_score_alert_dialog_text">Your score is %.2f</string>
    <string name="no_quizzes_text">There are no quizzes available at the moment.</string>
    <string name="title_activity_show_quiz">ShowQuizActivity</string>
    <string name="quiz_score_alert_dialog_title">Current score</string>
    <string name="quiz_score_alert_dialog_button_text">OK</string>
    <string name="button_previousQuestion">Previous question</string>
    <string name="button_handin">Hand in quiz</string>
    <string name="error_fetching_quizzes">An error occurred while fetching quizzes.</string>
    <string name="you_are_offline">You are now in offline mode.</string>
    <string name="you_are_online">You are now in online mode.</string>
    <string name="online_transition_error">There was an error transitioning to online mode.</string>
    <string name="msg_offline_on_error">Internal Server Error received, you are now in offline mode</string>
     
</resources>