<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/auth_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="#336699"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/auth_message"
        android:textColor="#FFFFFF"
        android:textSize="22dp"
        android:textStyle="bold"
        tools:context=".AuthenticationActivity" />
    
    <ImageView
        android:src="@drawable/eye"
        android:contentDescription="@string/tequila"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/auth_title" />

    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/auth_login"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/auth_login_hint"
            android:tag="@string/auth_login_hint" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/auth_pass"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/auth_login"
            android:hint="@string/auth_pass_hint"
            android:inputType="textPassword"
            android:tag="@string/auth_pass_hint" />

        <Button
            android:id="@+id/auth_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/auth_pass"
            android:onClick="doAuthentication"
            android:text="@string/auth_submit_text" />
    </RelativeLayout>

</RelativeLayout>