<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- Top: title and question text -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_activity_edit_question"
        android:textSize="22dp" />

    <EditText
        android:id="@+id/edit_question_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#336699"
        android:gravity="center_vertical"
        android:hint="@string/edit_question_hint"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textSize="22dp"
        android:textStyle="bold" />

    <!-- The answers -->

    <LinearLayout
        android:id="@+id/edit_answers_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edit_answer_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/edit_answer_hint" />

        <Button
            android:id="@+id/edit_button_mark_correct_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="" />

        <Button
            android:id="@+id/edit_button_remove_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/edit_button_remove_answer" />
    </LinearLayout>

    <Button
        android:id="@+id/edit_button_new_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/edit_button_new_answer" />

    <!-- Bottom: tags and submit -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edit_tags"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:hint="@string/edit_tags_hint"
            android:textSize="15dp" />

        <Button
            android:id="@+id/edit_submit"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/edit_button_submit" />
    </LinearLayout>

</LinearLayout>