<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/main_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/main_message"
        android:background="#336699"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textSize="22dp"
        android:textStyle="bold"
        tools:context=".MainActivity" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_choose_display"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/button_choose_display_text"
            android:onClick="goToDisplayActivity" />

        <Button
            android:id="@+id/button_choose_submit"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/button_choose_submit_text"
            android:onClick="goToSubmitActivity" />
    </LinearLayout>

</RelativeLayout>